# polymarkt-bot

./: .gitignore  README.md  backtest.py  bot.py  clob_client.py  config.py  dashboard.py  kelly.py  market_scanner.py  persistence.py  pyproject.toml  redemption.py  requirements.txt  retry.py  ssvi.py
.hypothesis/constants/: 0c941827e04ece2d  38fd4a48af2621cc  3d2f8d3fb8804882  57963ae9c88c6e29  8451780ac22ec867  908c0ff0ef1b2017  93b15684b4ab2cf8  95ab26f8b043d55a  99fa12820e562753  c3781f7621ff5fa7  ee07a46cebf77b84  fddc62607ece4b7f
.playwright-mcp/: page-2026-04-02T07-24-54-254Z.yml  page-2026-04-02T07-25-13-253Z.yml  page-2026-04-02T07-25-26-834Z.yml  page-2026-04-02T07-25-27-765Z.yml
data/: bot.db  bot.db-shm
static/: dashboard.html
tests/: conftest.py  test_bot_impact.py  test_clob_client.py  test_config.py  test_integration.py  test_kelly.py  test_market_scanner.py  test_persistence.py  test_redemption.py  test_retry.py  test_ssvi.py
